# vkop

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  toolchain.cmake
benchmark/: CMakeLists.txt  README.md  main.cpp  resnet.cpp  resnet50v2.cpp
core/: Tensor.cpp  Tensor.hpp  function.cpp  function.hpp  runtime.cpp  runtime.hpp
example/: CMakeLists.txt
example/demo/: CMakeLists.txt  main.cpp
example/demo/video/: CMakeLists.txt  main.cpp
example/demo/video/shaders/: image.frag  quad.vert
example/yolo/: CMakeLists.txt  README.md  main.cpp  runyolo.py
include/: logger.hpp  renderdoc_app.h
model/: CMakeLists.txt  add_conv_model.onnx  add_conv_model.vkopbin  add_conv_onnx.py  add_model.onnx  download_models.py  load.cpp  load.hpp  onnx2vkop.py
model/pypi/: .gitignore  LICENSE  MANIFEST.in  README.md  onnx2vkop.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
model/pypi/onnx2vkop/: __init__.py  cli.py  converter.py  optimizer.py
model/pypi/src/: __init__.py  cli.py  convertor.py  dag.py  optimizer.py
model/vscode/: README.md  extension.js  package.json  tsconfig.json  vkop-model-viewer-0.0.2.vsix
model/vscode/media/: main.js  styles.css
ops/: Add.cpp  Add.hpp  Atan.hpp  AttriOperators.cpp  AveragePool.hpp  BatchNorm.hpp  BatchNorm2d.hpp  BinaryFactory.hpp  BinaryOperators.cpp  Col2Im.cpp  Col2Im.hpp  Concat.hpp  Conv2d.cpp  Conv2d.hpp  Cos.hpp  Div.hpp  ElementWise.cpp  ElementWiseFactory.hpp  Erf.hpp  Expand.hpp  Floor.hpp  Gather.hpp  Gemm.hpp  GlobalAveragePool.hpp  GridSample.cpp  GridSample.hpp  LayerNorm.hpp  Matmul.hpp  Maxpool2d.cpp  Maxpool2d.hpp  Mul.hpp  Neg.hpp  Nms.hpp  Operator.hpp  OperatorFactory.hpp  Operators.cpp  Ops.hpp  PRelu.hpp  Pow.hpp  Range.hpp  (+19 more)
shaders/: activation.comp  add.comp  atan.comp  averagepool.comp  batchnorm.comp  batchnorm2d.comp  broadcast.comp  col2im.comp  concat.comp  conv2d.comp  cos.comp  div.comp  erf.comp  expand.comp  floor.comp  gather.comp  gemm.comp  globalaveragepool.comp  grid_sample.comp  gridsample.comp  layernorm.comp  matmul.comp  matmul_nv.comp  maxpool2d.comp  mul.comp  neg.comp  nms.comp  pow.comp  prelu.comp  range.comp  reduce.comp  relu.comp  reshape.comp  resize.comp  sigmoid.comp  sin.comp  slice.comp  softmax.comp  softmax2.comp  softplus.comp  (+6 more)
src/: Renderdoc.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanLib.cpp  VulkanLib.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanQueryPool.cpp  VulkanQueryPool.hpp  VulkanResource.hpp  VulkanShader.cpp  VulkanShader.hpp
tests/: AddTest.cpp  AtanTest.cpp  AveragePoolTest.cpp  BatchNorm2dTest.cpp  BatchNormTest.cpp  BinaryTest.hpp  CMakeLists.txt  ConcatTest.cpp  Conv2dTest.cpp  DivTest.cpp  ErfTest.cpp  ExpandTest.cpp  FloorTest.cpp  GatherTest.cpp  GemmTest.cpp  GlobalAveragePoolTest.cpp  GridSampleTest.cpp  LayerNormTest.cpp  MatMulTest.cpp  MaxPoolTest.cpp  ModelTest.cpp  MulTest.cpp  NmsTest.cpp  PReluTest.cpp  PowTest.cpp  RangeTest.cpp  ReduceTest.cpp  ReluTest.cpp  ReshapeTest.cpp  ResizeTest.cpp  SigmoidTest.cpp  SliceTest.cpp  SoftmaxTest.cpp  SoftplusTest.cpp  SplitTest.cpp  SubTest.cpp  TopkTest.cpp  TransposeTest.cpp  UnaryTest.hpp  setup.cpp  (+1 more)
vulkan/: Renderdoc.hpp  VMA.cpp  VMA.hpp  VulkanBasePipeline.cpp  VulkanBasePipeline.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferView.cpp  VulkanBufferView.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanCudaLaunch.cpp  VulkanCudaLaunch.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanFramebuffer.cpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanLib.cpp  VulkanLib.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanQueryPool.cpp  VulkanQueryPool.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanResource.hpp  VulkanSemaphore.cpp  VulkanSemaphore.hpp  VulkanShader.cpp  VulkanShader.hpp  (+7 more)
