[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx2vkop"
version = "0.1.1"
description = "ONNX to VKOP model converter and optimizer"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Wan Junjie", email = "wan.junjie@foxmail.com"}
]
maintainers = [
    {name = "Wan Junjie", email = "wan.junjie@foxmail.com"}
]
keywords = [
    "onnx",
    "vulkan",
    "deep-learning",
    "model-optimizer",
    "neural-network",
    "inference"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "onnx>=1.14.0",
    "numpy>=1.20.0",
    "onnxsim>=0.4.0",
    "onnxoptimizer>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/junka/vkop/model/pypi"
Repository = "https://github.com/junka/vkop/model/pypi"
Issues = "https://github.com/junka/vkop/issues"

[project.scripts]
onnx2vkop = "onnx2vkop.cli:main"

[tool.setuptools]
packages = ["onnx2vkop"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=onnx2vkop --cov-report=term-missing"